sysfsutils (2.1.1-7) UNRELEASED; urgency=medium

  * Update debian/.gitignore file.
  * Update sysfs.conf(5) to mention that it supports glob wildcards.

 -- Guillem Jover <guillem@debian.org>  Sat, 15 Mar 2025 03:07:34 +0100

sysfsutils (2.1.1-6) unstable; urgency=medium

  * Switch from future=+lfs to abi=+lfs build flags feature, and Build-Depends
    on dpkg-dev >= 1.22.0.
  * Turn function scoped variable into a local in init script.
  * Remove README.Debian, which contains obvious information.
  * Improve examples scaffolding:
    - Provide a stub config.h with constant contents needed by the examples.
    - Provide a VPATH-enabled Makefile to build the examples.
    - Rename README.Examples to README.
    - Rewrite the README.

 -- Guillem Jover <guillem@debian.org>  Thu, 11 Jan 2024 00:16:42 +0100

sysfsutils (2.1.1-5) unstable; urgency=medium

  * Add a systemd service file. Closes: #1016610

 -- Guillem Jover <guillem@debian.org>  Sun, 20 Aug 2023 16:27:05 +0200

sysfsutils (2.1.1-4) unstable; urgency=medium

  * Switch to Standards-Version 4.6.2 (no changes needed).
  * Add source lintian overrides.
  * Do not trim debian/changelog.
  * Make globs in debhelper fragment files more specific.
  * Replace sysfsutils Depends on lsb-base with sysvinit-utils >= 3.05-4~.

 -- Guillem Jover <guillem@debian.org>  Wed, 18 Jan 2023 00:09:23 +0100

sysfsutils (2.1.1-3) unstable; urgency=medium

  * Pass -u to date(1) to make build reproducible again.
    Thanks to Chris Lamb <lamby@debian.org>. Closes: #1017920
  * Remove filenamemangle option from debian/watch.

 -- Guillem Jover <guillem@debian.org>  Mon, 22 Aug 2022 20:40:21 +0200

sysfsutils (2.1.1-2) unstable; urgency=medium

  * Improve init script:
    - Do not use -o and -a for shell test command.
    - Pass -r to read built-in.
    - Use printf instead of undefined «echo -n».
    - Disable shellcheck following sourcing shell library file.
    - Quote directory variable to avoid word-splitting.